--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,36 @@ During development, it is useful to see the fieldset default borders. However, t
 Remove the border, and add 2rem of padding only to the top and bottom of each fieldset. Be sure to remove the padding from the 
 left and right.
 
+Step 46
+To give the fieldset elements a bit of separation, select them and give them a border-bottom of 3px solid #3b3b4f.
+
+Step 47
+The border of the last fieldset element looks a little out of place. You can select the last element of a specific type using 
+the last-of-type CSS pseudo-class, like this:
+p:last-of-type { }
+That will select the last p element. Create a new selector that targets the last fieldset element and set its border-bottom to 
+none.
+
+Step 48
+It would be nicer to have the label text appear above the form elements.
+Select all input, textarea, and select elements, and make them take up the full width of their parent elements.
+Also, add 10px of margin to the top of the selected elements. Set the other margins to 0.
+
+Step 50
+Select only the .inline elements, and give them width of unset. This will remove the earlier rule which set all the input 
+elements to width: 100%.
+
+Step 51
+Add some space between the .inline elements and the label text, by giving a right margin of 0.5em. Also, set all the other 
+margin to 0.
+
+Step 52
+If you look close enough, you will notice the .inline elements are too high on the line.
+To combat this, set the vertical-align property to middle.
+
+Step 53
+To make the input and textarea elements blend in with the background theme, set their background-color to #0a0a23. 
+Then, give them a 1px, solid border with a color of #0a0a23.
 
 
 
@@ -65,5 +95,28 @@ form {
 
 fieldset {
   border: 0;
+  border-bottom: 3px solid #3b3b4f;
   padding: 2rem 0;
+}
+
+fieldset:last-of-type {
+  border-bottom: none;
+}
+
+input, textarea, select {
+  width: 100%;
+  margin: 10px 0 0 0;
+}
+
+.inline {
+  width: unset;
+  margin: 0;
+  margin-right: 0.5em;
+  vertical-align: middle;
+}
+
+input, textarea {
+  background-color:#0a0a23;
+  border: 1px solid #0a0a23;
+
 }
