--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,52 @@ Step 53
 To make the input and textarea elements blend in with the background theme, set their background-color to #0a0a23. 
 Then, give them a 1px, solid border with a color of #0a0a23.
 
+Step 54
+Currently, if you type in the input or textarea elements, you will not be able to see the text. Also, their height is too 
+small to be easy to use.
+Fix this, by setting the color to #ffffff, and setting their min-height to 2em.
+
+Step 55
+You want the select element to remain with a white background, but now it is not getting the same min-height as the input and 
+textarea elements. Move the min-height property and value so that all three element types have the same min-height value, and 
+the select element still has a white background.
+
+Step 56Passed
+To style the submit button, you can use an attribute selector, which selects an element based on the given attribute value. 
+Here is an example:
+input[name="password"]
+The above selects input elements with a name attribute value of password. Now, use the attribute selector to style the submit 
+button with a display of block, and a width of 60%.
+
+Step 57
+With a display of block the submit button sits flush against the left edge of its parent.
+Use the same technique used to center the form to center the submit button.
+
+Step 58
+To make the submit button look more in line with the rest of the form, give it the same height as the other fields (2em). 
+Also, increase the font-size to 1.1rem.
+
+Step 59
+To make the submit button appear more distinct, give it a background-color of #3b3b4f, and a border-color of white.
+
+Step 60
+Lastly, for the submit button, you want to separate it from the fieldset above, and adjust its width to never be below 300px.
+Change the margin property to include 1em on the top and bottom, while leaving the right and left margins set to auto. 
+Then set the width as described above.
+
+Step 61
+Most browsers inject their own default CSS properties and values for different elements. If you look closely, you might be 
+able to notice the file input is smaller than the other text input elements. By default, a padding of 1px 2px is given to 
+input elements you can type in.
+Using another attribute selector, style the input with a type of file to be the same padding as the other input elements.
+
+Step 62
+Speaking of padding, the submit button is sitting at the bottom of the form element. Add 2em of padding only to the 
+bottom of the form.
+
+Step 63
+Last, but not least, change the text color of the terms and conditions link to #dfdfe2.
+Well done! You have completed the final part of the Registration Form practice project.
 
 
 */
@@ -91,6 +137,7 @@ form {
   max-width: 500px;
   min-width: 300px;
   width: 60vw;
+  padding-bottom: 2em;
 }
 
 fieldset {
@@ -106,6 +153,7 @@ fieldset:last-of-type {
 input, textarea, select {
   width: 100%;
   margin: 10px 0 0 0;
+  min-height: 2em;
 }
 
 .inline {
@@ -118,5 +166,26 @@ input, textarea, select {
 input, textarea {
   background-color:#0a0a23;
   border: 1px solid #0a0a23;
+  color: #ffffff;
+}
 
+input[type="submit"] { /* Why the type attribute was used? Why could value attribute be used?*/
+  display: block;
+  width: 60%;
+  margin: 0 auto;
+  height: 2em;
+  font-size: 1.1rem;
+  background-color:#3b3b4f;
+  border-color: white;
+  min-width: 300px;
+  margin: 1em auto 1em auto;
+  
+}
+
+input[type="file"] {
+  padding: 1px 2px;
+}
+
+a {
+  color:#dfdfe2;
 }
